--- a/index.html
+++ b/index.html
@@ -120,10 +120,8 @@
   <section class="bg-[var(--brand-blue)] text-white py-20 md:py-28 px-4 md:px-6 text-center">
     <div class="container mx-auto max-w-4xl">
 
-      <!-- Forced line break for two lines -->
       <h2 class="text-3xl md:text-5xl font-extrabold mb-6 animate-title leading-tight">
-        Yorkshire Support<br />
-        Delivered With Heart
+        Yorkshire Support<br />Delivered With Heart
       </h2>
 
       <p class="text-lg md:text-2xl mb-8 animate-lead leading-relaxed">
@@ -132,7 +130,6 @@
         We empower individuals across West Yorkshire to grow in confidence, independence and wellbeing every day.
       </p>
 
-      <!-- FIXED, NON-ANIMATED BUTTON -->
       <a href="#contact"
         class="inline-block bg-[var(--brand-pink)] px-8 md:px-10 py-4 rounded-xl 
         text-lg md:text-xl font-semibold shadow-lg btn-main">
@@ -316,7 +313,6 @@
 
     </div>
   </section>
-
   <!-- TESTIMONIALS -->
   <section id="testimonials" class="bg-white py-16 md:py-20 px-4 md:px-6">
     <div class="container mx-auto max-w-5xl text-center">
@@ -380,47 +376,59 @@
 
     <div class="grid grid-cols-1 md:grid-cols-3 gap-8 md:gap-10">
 
-      <div class="partner-card p-8 rounded-2xl bg-[var(--brand-pink)] text-white shadow-xl text-center">
+      <!-- BCCF -->
+      <a href="https://www.bradfordcitycf.org.uk" target="_blank" 
+         class="partner-card p-8 rounded-2xl bg-[var(--brand-pink)] text-white shadow-xl text-center block">
         <h3 class="text-xl md:text-2xl font-bold mb-2">Bradford City Community Foundation</h3>
         <p class="text-sm opacity-90">
           Supporting mental wellbeing and inclusion through community football programmes.
         </p>
-      </div>
+      </a>
 
-      <div class="partner-card p-8 rounded-2xl bg-[var(--brand-blue)] text-white shadow-xl text-center">
+      <!-- Rugby League Cares -->
+      <a href="https://www.rugbyleaguecares.org" target="_blank"
+         class="partner-card p-8 rounded-2xl bg-[var(--brand-blue)] text-white shadow-xl text-center block">
         <h3 class="text-xl md:text-2xl font-bold mb-2">Rugby League Cares</h3>
         <p class="text-sm opacity-90">
-          Promoting positive mental health through wellbeing initiatives and support in rugby communities.
+          Promoting positive mental health through wellbeing initiatives in rugby communities.
         </p>
-      </div>
+      </a>
 
-      <div class="partner-card p-8 rounded-2xl bg-[var(--brand-pink)] text-white shadow-xl text-center">
+      <!-- Mind in Bradford -->
+      <a href="https://www.mindinbradford.org.uk" target="_blank"
+         class="partner-card p-8 rounded-2xl bg-[var(--brand-pink)] text-white shadow-xl text-center block">
         <h3 class="text-xl md:text-2xl font-bold mb-2">Mind in Bradford</h3>
         <p class="text-sm opacity-90">
-          Providing mental health support, crisis services and wellbeing activities across Bradford.
+          Providing mental health support, crisis services and wellbeing activities.
         </p>
-      </div>
+      </a>
 
-      <div class="partner-card p-8 rounded-2xl bg-[var(--brand-blue)] text-white shadow-xl text-center">
+      <!-- Samaritans -->
+      <a href="https://www.samaritans.org" target="_blank"
+         class="partner-card p-8 rounded-2xl bg-[var(--brand-blue)] text-white shadow-xl text-center block">
         <h3 class="text-xl md:text-2xl font-bold mb-2">Samaritans</h3>
         <p class="text-sm opacity-90">
           Offering emotional support to anyone experiencing distress or mental health challenges.
         </p>
-      </div>
+      </a>
 
-      <div class="partner-card p-8 rounded-2xl bg-[var(--brand-pink)] text-white shadow-xl text-center">
-        <h3 class="text-xl md:text-2xl font-bold mb-2">Andy’s Man Club</h3>
+      <!-- Andy's Man Club -->
+      <a href="https://andysmanclub.co.uk" target="_blank"
+         class="partner-card p-8 rounded-2xl bg-[var(--brand-pink)] text-white shadow-xl text-center block">
+        <h3 class="text-xl md:text-2xl font-bold mb-2">Andy's Man Club</h3>
         <p class="text-sm opacity-90">
-          Creating safe spaces for men to talk openly and improve their mental wellbeing.
+          Creating safe spaces for men to talk openly and improve mental wellbeing.
         </p>
-      </div>
+      </a>
 
-      <div class="partner-card p-8 rounded-2xl bg-[var(--brand-blue)] text-white shadow-xl text-center">
+      <!-- Premier League Foundation -->
+      <a href="https://www.premierleague.com/communities" target="_blank"
+         class="partner-card p-8 rounded-2xl bg-[var(--brand-blue)] text-white shadow-xl text-center block">
         <h3 class="text-xl md:text-2xl font-bold mb-2">Premier League Foundation</h3>
         <p class="text-sm opacity-90">
-          Using football and community programmes to promote inclusion, confidence and positive mental health.
+          Using football and community programmes to promote inclusion and wellbeing.
         </p>
-      </div>
+      </a>
 
     </div>
   </section>
@@ -462,8 +470,8 @@
       <div class="text-center mt-10">
         <img src="cqc-logo.png" class="mx-auto h-16 md:h-20 mb-4" alt="CQC Logo">
 
-        <a href="https://www.cqc.org.uk"
-           class="font-bold text-lg md:text-xl underline text-white" target="_blank">
+        <a href="https://www.cqc.org.uk" target="_blank"
+           class="font-bold text-lg md:text-xl underline text-white">
           Visit our CQC Page
         </a>
       </div>
