--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       <p class="text-lg md:text-2xl mb-8 animate-lead leading-relaxed">
         At Yorkshire Rose Care, we believe everyone deserves compassion, dignity and the chance to live a fulfilling life.
         Our support is rooted in warmth, respect and the Yorkshire spirit of looking after one another.
-        We support people across West Yorkshire with mental health needs and learning disabilities to build confidence, independence and wellbeing.
+        We support people across Yorkshire with mental health needs and learning disabilities to build confidence, independence and wellbeing.
       </p>
 
       <!-- Fixed (not animated away) -->
@@ -113,12 +113,12 @@
       </p>
 
       <p class="text-base md:text-lg mb-4">
-        We work alongside individuals, families and professionals to build routines, skills and confidence — supporting people to live safely,
+        We work alongside individuals, families and professionals to build routines, skills and confidence, supporting people to live safely,
         make choices and feel part of their community.
       </p>
 
       <p class="text-base md:text-lg">
-        Our mission is simple: help people live well, live safely, and live with confidence — the Yorkshire way.
+        Our mission is simple: help people live well, live safely, and live with confidence, the Yorkshire way.
       </p>
     </div>
   </section>
@@ -164,7 +164,7 @@
             This can include personal care, meal preparation, prompting and encouragement, and practical help with routines.
           </p>
           <p>
-            Our approach is calm, consistent and person-centred — with an emphasis on choice, dignity and building confidence over time.
+            Our approach is calm, consistent and person-centred, with an emphasis on choice, dignity and building confidence over time.
             We work flexibly to support wellbeing, reduce stress and help people feel settled at home.
           </p>
           <div class="mt-5">
@@ -179,7 +179,7 @@
             We help individuals develop life skills, maintain their tenancy and feel confident within their home environment.
           </p>
           <p>
-            We also support community engagement — whether that’s appointments, volunteering, social activities or building routines
+            We support community engagement, whether that’s appointments, volunteering, social activities or building routines
             that promote stability and positive mental health. The focus is always on choice, dignity and long-term outcomes.
           </p>
           <div class="mt-5">
@@ -226,7 +226,7 @@
           <p class="text-lg font-semibold mb-4">Director</p>
           <p class="mb-4">Robert has over 15 years of care management experience across the region and is known for driving quality and improving outcomes.</p>
           <p class="mb-4">He is the Designated Safeguarding Lead, ensuring the highest safety and protection standards for the people we support.</p>
-          <p>A proud Bradford City fan and devoted family man.</p>
+          <p>A proud Bradford City fan and founder of the organisation recognised for his commitment to his work in mental health across Yorkshire..</p>
         </div>
 
         <div class="bg-[var(--brand-blue)] text-white p-6 md:p-8 rounded-2xl shadow-xl card-float animate-fade border-4 border-[var(--brand-pink)]">
@@ -234,15 +234,15 @@
           <p class="text-lg font-semibold mb-4">Director</p>
           <p class="mb-4">Salman is deeply committed to delivering outstanding care and support for individuals with learning disabilities, autism and mental health needs.</p>
           <p class="mb-4">He champions person-centred practice and helps shape services that are compassionate, consistent and community-focused.</p>
-          <p>Outside of work, Salman enjoys time with family and friends.</p>
+          <p>Outside of work, Salman enjoys time with family and is well known for his calm, approachable personality.</p>
         </div>
 
         <div class="bg-[var(--brand-pink)] text-white p-6 md:p-8 rounded-2xl shadow-xl card-float animate-fade border-4 border-[var(--brand-blue)]">
           <h3 class="text-2xl md:text-3xl font-bold mb-2">Support Workers</h3>
           <p class="text-lg font-semibold mb-4">Our Frontline Team</p>
           <p class="mb-4">Support workers provide day-to-day, person-centred support that helps individuals build confidence, develop skills and feel safe.</p>
-          <p class="mb-4">They promote independence, emotional wellbeing and community engagement — always led by the person’s goals and choices.</p>
-          <p>Compassionate, patient and dedicated — making a difference every day.</p>
+          <p class="mb-4">They promote independence, emotional wellbeing and community engagement, always led by the person’s goals and choices.</p>
+          <p>Compassionate, patient and dedicated, making a difference every day.</p>
         </div>
 
       </div>
@@ -302,8 +302,8 @@
     <h2 class="text-3xl md:text-4xl font-bold text-[var(--brand-blue)] text-center mb-8">Our Partners</h2>
 
     <p class="text-center max-w-4xl mx-auto text-base md:text-lg mb-12 text-gray-700">
-      We collaborate with organisations that champion mental health, inclusion and community wellbeing across Yorkshire.
-      These partnerships reflect shared values — promoting support networks, reducing stigma and improving outcomes for people and communities.
+      We are proud to collaborate with organisations that champion mental health, inclusion and community wellbeing across Yorkshire.
+      These partnerships reflect shared values, promoting support networks, reducing stigma and improving outcomes for people and communities.
     </p>
 
     <div class="grid grid-cols-1 md:grid-cols-3 gap-8 md:gap-10">
@@ -329,7 +329,7 @@
       <a href="https://www.samaritans.org" target="_blank"
          class="partner-card block p-8 rounded-2xl bg-[var(--brand-blue)] text-white shadow-xl text-center border-4 border-[var(--brand-pink)] card-float">
         <h3 class="text-xl md:text-2xl font-bold mb-2">Samaritans</h3>
-        <p class="text-sm opacity-95">Emotional support for anyone experiencing distress — a vital part of prevention and recovery.</p>
+        <p class="text-sm opacity-95">Emotional support for anyone experiencing distress, a vital part of prevention and recovery.</p>
       </a>
 
       <a href="https://andysmanclub.co.uk" target="_blank"
