--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
   <!-- TOP CONTACT BAR -->
   <div class="bg-[var(--brand-blue)] text-white py-2 text-center text-sm md:text-lg font-semibold">
-    📞 07793 487 157 |
+    📞 01274 449277 |
     <a href="mailto:info@yorkshirerosecare.co.uk" class="underline hover:text-[var(--brand-pink)]">
       📧 info@yorkshirerosecare.co.uk
     </a>
@@ -389,7 +389,7 @@
       <div class="mt-10 text-center leading-relaxed text-base md:text-lg">
         <p class="font-bold">Oakwood Court</p>
         <p>City Road, Bradford, BD8 8JY</p>
-        <p class="font-semibold mt-2">Tel: 07793 487 157</p>
+        <p class="font-semibold mt-2">Tel: 01274 449277</p>
       </div>
 
     </div>
