--- a/index.html
+++ b/index.html
@@ -38,10 +38,6 @@
     <a href="mailto:info@yorkshirerosecare.co.uk" class="underline hover:text-[var(--brand-pink)]">
       📧 info@yorkshirerosecare.co.uk
     </a>
-    |
-    <a href="https://x.com/YorksRoseCare" target="_blank" class="underline hover:text-[var(--brand-pink)]">
-      𝕏 @YorksRoseCare
-    </a>
   </div>
 
   <!-- HEADER -->
@@ -106,7 +102,7 @@
     </div>
   </section>
 
-  <!-- ABOUT (Opposite colour wrap: pink content, BLUE border) -->
+  <!-- ABOUT -->
   <section id="about" class="container mx-auto px-4 md:px-6 py-16 md:py-20">
     <div class="bg-[var(--brand-pink)] text-white p-8 md:p-10 rounded-2xl shadow-xl leading-relaxed card-float border-4 border-[var(--brand-blue)]">
       <h2 class="text-3xl md:text-4xl font-bold mb-6 text-center">About Us</h2>
@@ -127,13 +123,12 @@
     </div>
   </section>
 
-  <!-- VALUES (Opposite colour wrap: cards keep their fill colour, border is the opposite) -->
+  <!-- VALUES -->
   <section id="values" class="bg-white py-16 md:py-20 px-4 md:px-6">
     <div class="container mx-auto">
       <h2 class="text-3xl md:text-4xl font-bold text-center mb-12 text-[var(--brand-blue)]">Our Values</h2>
 
       <div class="grid grid-cols-1 md:grid-cols-3 gap-8 md:gap-10">
-
         <div class="p-6 md:p-8 rounded-2xl shadow-xl bg-[var(--brand-blue)] text-white card-float animate-fade border-4 border-[var(--brand-pink)]">
           <h3 class="text-2xl md:text-3xl font-bold mb-3">Proud</h3>
           <p>We take pride in the people we support, the standards we set, and the positive change we create across Yorkshire.</p>
@@ -148,15 +143,13 @@
           <h3 class="text-2xl md:text-3xl font-bold mb-3">Committed</h3>
           <p>We are committed to safe, high-quality support that protects dignity, promotes independence and improves outcomes.</p>
         </div>
-
       </div>
     </div>
   </section>
 
-  <!-- SERVICES (Opposite colour wrap: white cards with BLUE borders, because section is blue) -->
+  <!-- SERVICES -->
   <section id="services" class="bg-[var(--brand-blue)] py-16 md:py-20 px-4 md:px-6 text-white">
     <div class="container mx-auto">
-
       <h2 class="text-3xl md:text-4xl font-bold text-center mb-12">What We Offer</h2>
 
       <div class="grid grid-cols-1 md:grid-cols-3 gap-8 md:gap-10">
@@ -217,10 +210,9 @@
     </div>
   </section>
 
-  <!-- TEAM (Opposite colour wrap: each card has opposite border) -->
+  <!-- TEAM -->
   <section id="team" class="bg-white py-16 md:py-20 px-4 md:px-6">
     <div class="container mx-auto">
-
       <h2 class="text-3xl md:text-4xl font-bold text-center mb-12 text-[var(--brand-blue)]">Meet the Team</h2>
 
       <div class="grid grid-cols-1 md:grid-cols-3 gap-8 md:gap-10">
@@ -228,6 +220,15 @@
         <div class="bg-[var(--brand-pink)] text-white p-6 md:p-8 rounded-2xl shadow-xl card-float animate-fade border-4 border-[var(--brand-blue)]">
           <h3 class="text-2xl md:text-3xl font-bold mb-2">Robert Cranmer</h3>
           <p class="text-lg font-semibold mb-4">Director</p>
+
+          <!-- ROBERT PHOTO (ONLY ADDITION) -->
+          <img
+            src="https://raw.githubusercontent.com/robcranmer/yorkshire-rose-care/main/robert-cranmer.jpg"
+            alt="Robert Cranmer"
+            class="w-32 h-32 md:w-36 md:h-36 rounded-full object-cover mx-auto mb-5 border-4 border-white shadow-lg"
+            loading="lazy"
+          />
+
           <p class="mb-4">Robert has over 15 years of care management experience across the region and is known for driving quality and improving outcomes.</p>
           <p class="mb-4">He is the Designated Safeguarding Lead, ensuring the highest safety and protection standards for the people we support.</p>
           <p>A proud Bradford City fan and founder of the organisation recognised for his commitment to his work in mental health across Yorkshire..</p>
@@ -253,10 +254,9 @@
     </div>
   </section>
 
-  <!-- TESTIMONIALS (Opposite colour wrap: outer fill with opposite border) -->
+  <!-- TESTIMONIALS -->
   <section id="testimonials" class="bg-white py-16 md:py-20 px-4 md:px-6">
     <div class="container mx-auto max-w-5xl text-center">
-
       <h2 class="text-3xl md:text-4xl font-bold text-[var(--brand-blue)] mb-12">Testimonials</h2>
 
       <div class="grid grid-cols-1 md:grid-cols-2 gap-10">
@@ -301,7 +301,7 @@
     </div>
   </section>
 
-  <!-- PARTNERS (Replace Premier League Foundation with Bradford Hospitals Charity) -->
+  <!-- PARTNERS -->
   <section id="partners" class="container mx-auto px-4 md:px-6 py-16 md:py-20">
     <h2 class="text-3xl md:text-4xl font-bold text-[var(--brand-blue)] text-center mb-8">Our Partners</h2>
 
@@ -351,7 +351,7 @@
     </div>
   </section>
 
-  <!-- CONTACT (Opposite colour wrap: form has PINK border on pink section, so use BLUE border on outer + PINK on inner elements) -->
+  <!-- CONTACT -->
   <section id="contact" class="bg-[var(--brand-pink)] py-16 md:py-20 px-4 md:px-6 text-white">
     <div class="container mx-auto max-w-3xl">
 
@@ -391,7 +391,7 @@
       </div>
 
       <div class="mt-10 text-center leading-relaxed text-base md:text-lg">
-        <p class="font-bold">15C Suite, Oakwood Court</p>
+        <p class="font-bold">Oakwood Court</p>
         <p>City Road, Bradford, BD8 8JY</p>
         <p class="font-semibold mt-2">Tel: 01274 449277</p>
       </div>
